[gd_scene load_steps=3 format=3 uid="uid://djrhxv5bx0bbw"]

[ext_resource type="Script" path="res://addons/open_editors/open_editors.gd" id="1_yyvqh"]
[ext_resource type="Texture2D" uid="uid://cku1ojwekbsp0" path="res://addons/open_editors/Search.svg" id="2_aomn1"]

[node name="OpenEditors" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yyvqh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FilterLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Filter Open Editors"
clear_button_enabled = true
right_icon = ExtResource("2_aomn1")

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Panel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="OpenEditorItems" type="VBoxContainer" parent="VBoxContainer/Panel/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -5

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="text_changed" from="VBoxContainer/FilterLineEdit" to="." method="_on_filter_line_edit_text_changed"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48305" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48305" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48305" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48305" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48305" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48305" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48306" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48306" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48306" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48306" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48306" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48306" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48307" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48307" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48307" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48307" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48307" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48307" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48308" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48308" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48308" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48308" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48308" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48308" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48309" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48309" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48309" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48309" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48309" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48309" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48310" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48310" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48310" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48310" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48310" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48310" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48311" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48311" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48311" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48311" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48311" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48311" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48312" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48312" method="_on_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48312" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48312" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48312" to="VBoxContainer/Panel/PanelContainer/ScrollContainer/OpenEditorItems/@PanelContainer@48312" method="_on_mouse_exited"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_refresh_timer_timeout"]
